--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -61,7 +61,9 @@
         {% endfor %}
     {% endfor %}
 
-    {% block body %}{% endblock %}
+    {% block body %}
+
+     {% endblock %}
 
     <footer class="footer">
         <hr />
@@ -72,8 +74,6 @@
 <!-- /container -->
 
 {% block javascripts %}
-{#    <script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>#}
-{#    <script src="{{ path('fos_js_routing_js', { callback: 'fos.Router.setData' }) }}"></script>#}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/es6-promise/4.0.5/es6-promise.auto.min.js"></script>
     <script src="{{ asset('build/manifest.js') }}"></script>
     <script src="{{ asset('build/layout.js') }}"></script>
