--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,80 +3,80 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1.0">
-
-    <title>{% block title %}Find Something to Lift!{% endblock %}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{% block title %}Mangaka{% endblock %}</title>
 
     {% block stylesheets %}
-        <link href="{{ asset('build/layout.css') }}" rel="stylesheet" />
+        <link rel='stylesheet' href='https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css'>
+        <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
+        <link rel="stylesheet" href="{{ asset('css/Base.css') }}">
     {% endblock %}
-
-    <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
 </head>
+{% block Cabecera %}
 
-<body>
-
-<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<body id="page-top" class="index" data-pinterest-extension-installed="cr1.3.4">
+<!-- Navigation -->
+<nav class="navbar navbar-default navbar-fixed-top navbar-shrink">
     <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle"
-                    data-toggle="collapse"
-                    data-target=".navbar-collapse">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header page-scroll">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
+                <span class="icon-bar"/>
+                <span class="icon-bar"/>
+                <span class="icon-bar"/>
             </button>
-            <a class="navbar-brand"
-               href="{{ path('inicio') }}"
-               data-toggle="tooltip"
-               data-placement="bottom"
-               title="Manga con estilo">Mangaka</a>
+            <a class="navbar-brand page-scroll" href="#page-top">Mangaka Studio</a>
         </div>
-        <div class="navbar-collapse collapse">
-            {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
 
-            {% else %}
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="">
-                            Register
-                        </a>
-                    </li>
-                </ul>
-            {% endif %}
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+                <li class="hidden active">
+                    <a href="#page-top"></a>
+                </li>
+                <li class="">
+                    <a class="page-scroll" href="#services">Mangas</a>
+                </li>
+                <li class="">
+                    <a class="page-scroll" href="#portfolio">Categorias</a>
+                </li>
+                {% if not app.user %} {#Si el usuario no esta registrado#}
+                    <li class="">
+                        <a class="page-scroll" href="{{ path('app_login') }}"><i class="fa fa-user"></i> Identificate</a>
+                    </li><!-- end login -->
+                {% elseif app.user %}
+                    <li class="">
+                        <a class="page-scroll" href="{{ path('app_login') }}"><i class="fa fa-user-times"></i> Salir</a>
+                    </li><!-- end login -->
+
+                {% endif %}
+            </ul>
         </div>
-        <!--/.navbar-collapse -->
+        <!-- /.navbar-collapse -->
     </div>
-</div>
+    <!-- /.container-fluid -->
+</nav>
+{% endblock %}
 
+{% block body %}
 
-<div class="container main-content">
-    {% for type, messages in app.session.flashbag.all() %}
-        {% for message in messages %}
-            <div class="flash-{{ type }} alert alert-info">
-                {{ message }}
-            </div>
-        {% endfor %}
-    {% endfor %}
-
-    {% block body %}
-
-     {% endblock %}
+{% endblock %}
 
     <footer class="footer">
         <hr />
 
         <p>&copy; Alejandro {{ ''|date('Y') }}</p>
     </footer>
-</div>
+
 <!-- /container -->
 
+
+
 {% block javascripts %}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/es6-promise/4.0.5/es6-promise.auto.min.js"></script>
-    <script src="{{ asset('build/manifest.js') }}"></script>
-    <script src="{{ asset('build/layout.js') }}"></script>
+    <!-- Plugin JavaScript -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="{{ asset('js/script.js') }}"></script>
 {% endblock %}
 
 </body>
