--- a/templates/capitulo/show.html.twig
+++ b/templates/capitulo/show.html.twig
@@ -5,79 +5,81 @@
 {% block body %}
     <h1>{{ capitulo.nombre }}</h1>
 
-<link rel="stylesheet" href="{{ asset('bundles/blueimp-gallery/css/blueimp-gallery.min.css') }}" />
+<link rel="stylesheet" href="{{ asset('css/blueimp-gallery.min.css') }}" />
+    <div class="container">
 
-<div
-        id="blueimp-gallery"
-        class="blueimp-gallery"
-        aria-label="image gallery"
-        aria-modal="true"
-        role="dialog"
->
-    <div class="slides" aria-live="polite"></div>
-    <h3 class="title"></h3>
-    <a
-            class="prev"
-            aria-controls="blueimp-gallery"
-            aria-label="previous slide"
-            aria-keyshortcuts="ArrowLeft"
-    >‹</a
-    >
-    <a
-            class="next"
-            aria-controls="blueimp-gallery"
-            aria-label="next slide"
-            aria-keyshortcuts="ArrowRight"
-    >›</a
-    >
-    <a
-            class="close"
-            aria-controls="blueimp-gallery"
-            aria-label="close"
-            aria-keyshortcuts="Escape"
-    >×</a
-    >
-    <a
-            class="play-pause"
-            aria-controls="blueimp-gallery"
-            aria-label="play slideshow"
-            aria-keyshortcuts="Space"
-            aria-pressed="false"
-            role="button"
-    ></a>
-    <ol class="indicator"></ol>
-</div>
+        <div
+                id="blueimp-gallery"
+                class="blueimp-gallery"
+                aria-label="image gallery"
+                aria-modal="true"
+                role="dialog"
+        >
+            <div class="slides" aria-live="polite"></div>
+            <a
+                    class="prev"
+                    aria-controls="blueimp-gallery"
+                    aria-label="previous slide"
+                    aria-keyshortcuts="ArrowLeft"
+            >‹</a
+            >
+            <a
+                    class="next"
+                    aria-controls="blueimp-gallery"
+                    aria-label="next slide"
+                    aria-keyshortcuts="ArrowRight"
+            >›</a
+            >
+            <a
+                    class="close"
+                    aria-controls="blueimp-gallery"
+                    aria-label="close"
+                    aria-keyshortcuts="Escape"
+            >×</a
+            >
+            <a
+                    class="play-pause"
+                    aria-controls="blueimp-gallery"
+                    aria-label="play slideshow"
+                    aria-keyshortcuts="Space"
+                    aria-pressed="false"
+                    role="button"
+            />
+            <ol class="indicator"/>
+        </div>
 
-<div id="links">
-    {% for pagina in capitulo.paginas %}
-        </br>
-        <a href="{{asset('media/' ~ pagina.getImagen()) }}">
-            <img class="lazy" src="{{ asset('media/' ~ pagina.getImagen()) }}" alt="algo"/>
-        </a>
+        <div id="links">
+            {% for pagina in capitulo.paginas %}
+                </br>
+                <a class="center-block" href="{{asset('media/' ~ pagina.getImagen()) }}">
+                    <img class="img-responsive center-block" src="{{ asset('media/' ~ pagina.getImagen()) }}" alt="pagina"/>
+                </a>
 
-    {% else %}
-        <tr>
-            <td colspan="4">no records found</td>
-        </tr>
-    {% endfor %}
+            {% else %}
+                <tr>
+                    <td colspan="4">No se han encontrado</td>
+                </tr>
+            {% endfor %}
 
 
-</div>
+        </div>
+    </div>
 
-<script src="{{ asset('bundles/blueimp-gallery/js/blueimp-gallery.min.js') }}"></script>
-
-    <script>
-        document.getElementById('links').onclick = function (event) {
-            event = event || window.event
-            var target = event.target || event.srcElement
-            var link = target.src ? target.parentNode : target
-            var options = { index: link, event: event }
-            var links = this.getElementsByTagName('a')
-            blueimp.Gallery(links, options)
-        }
-        blueimp.Gallery(document.getElementById('links').getElementsByTagName('a'), {
-            container: '#blueimp-gallery-carousel',
-            carousel: false
-        })
-    </script>
 {% endblock %}
+    {% block javascripts %}
+        {{ parent() }}
+        <script src="{{ asset('js/jquery.blueimp-gallery.min.js') }}"></script>
+        <script>
+            document.getElementById('links').onclick = function (event) {
+                event = event || window.event
+                var target = event.target || event.srcElement
+                var link = target.src ? target.parentNode : target
+                var options = { index: link, event: event }
+                var links = this.getElementsByTagName('a')
+                blueimp.Gallery(links, options)
+            }
+
+        </script>
+
+    {% endblock %}
+
