--- a/templates/principal/index.html.twig
+++ b/templates/principal/index.html.twig
@@ -3,7 +3,6 @@
 
 {% block stylesheets %}
     {{ parent() }}
-    <meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
     <link rel="stylesheet" href="{{ asset('css/Cards.css') }}" />
 {% endblock %}
 
@@ -12,7 +11,9 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Si te gusta</div>
+{#
+                <div class="intro-lead-in">¿Te esta gustando?</div>
+#}
                 <div class="intro-heading">No dudes en contribuir al proyecto</div>
                 <a href="https://github.com/alexdrago/mangaka" class="page-scroll btn btn-xl">Git-Repo</a>
             </div>
@@ -22,14 +23,20 @@
     <main class="page-content">
         {% for manga in mangas %}
             <div class="card"
-                 style=" background-image: url('{{  app.request.getBaseURL() }}{{asset('media/'~manga.getPortada())}}');
-                         background-size: 236px 350px;
+                 style=" background-image: url('{{asset('media/'~manga.getPortada())}}');
+                         background-size: cover;
                          background-repeat: no-repeat;
                  ">
                 <div class="content">
                     <h2 class="title">{{ manga.getNombre() }}</h2>
                     <p class="copy">{{ manga.getDescriptionCorta() }}</p>
-                    <a href="" class="btn">Ver</a>
+                    <a href="{{ path('manga_show', {'id': manga.getId()}) }}" class="btn">Ver</a>
+                    {% if app.user %} {#Si el usuario no esta registrado#}
+                        <a class="btn"><i class="far fa-heart"
+                                          style="color: red;
+                                             font-size: 16px"></i></a>
+                    {% endif %}
+
                 </div>
             </div>
         {% endfor %}
@@ -38,5 +45,4 @@
 
 {% block javascripts %}
     {{ parent() }}
-
 {% endblock %}
