--- a/public/css/Cards.css
+++ b/public/css/Cards.css
@@ -15,7 +15,6 @@ html, body {
 }
 
 body {
-  display: grid;
   place-items: center;
 }
 
@@ -23,7 +22,7 @@ body {
   display: grid;
   grid-gap: 1rem;
   padding: 1rem;
-  max-width: 1024px;
+  max-width: 1800px;
   margin: 0 auto;
   font-family: var(--font-sans);
 }
@@ -35,6 +34,10 @@ body {
 @media (min-width: 800px) {
   .page-content {
     grid-template-columns: repeat(4, 1fr);
+  }
+}@media (min-width: 1200px) {
+  .page-content {
+    grid-template-columns: repeat(6, 1fr);
   }
 }
 
