--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,59 +4,70 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Mangaka{% endblock %}</title>
-
+    <title>{% block title %}Mangaka Studio{% endblock %}</title>
+    {# bloque de favicon #}
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ asset('img/apple-touch-icon.png') }}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ asset('img/favicon-32x32.png') }}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ asset('') }}">
+    <link rel="manifest" href="{{ asset('img/site.webmanifest') }}">
+    <link rel="mask-icon" href="{{ asset('img/safari-pinned-tab.svg') }}" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="theme-color" content="#ffffff">
     {% block stylesheets %}
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous">
         <link rel='stylesheet' href='https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css'>
         <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
         <link rel="stylesheet" href="{{ asset('css/Base.css') }}">
     {% endblock %}
 </head>
+<body>
 {% block Cabecera %}
 
-<body id="page-top" class="index" data-pinterest-extension-installed="cr1.3.4">
-<!-- Navigation -->
-<nav class="navbar navbar-default navbar-fixed-top navbar-shrink">
-    <div class="container">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header page-scroll">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"/>
-                <span class="icon-bar"/>
-                <span class="icon-bar"/>
-            </button>
-            <a class="navbar-brand page-scroll" href="#page-top">Mangaka Studio</a>
-        </div>
+    <div id="page-top" class="index" data-pinterest-extension-installed="cr1.3.4">
+    <!-- Navigation -->
+    <nav class="navbar navbar-default navbar-fixed-top navbar-shrink">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header page-scroll">
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right">
-                <li class="hidden active">
-                    <a href="#page-top"></a>
-                </li>
-                <li class="">
-                    <a class="page-scroll" href="#services">Mangas</a>
-                </li>
-                <li class="">
-                    <a class="page-scroll" href="#portfolio">Categorias</a>
-                </li>
-                {% if not app.user %} {#Si el usuario no esta registrado#}
-                    <li class="">
-                        <a class="page-scroll" href="{{ path('app_login') }}"><i class="fa fa-user"></i> Identificate</a>
-                    </li><!-- end login -->
-                {% elseif app.user %}
-                    <li class="">
-                        <a class="page-scroll" href="{{ path('app_login') }}"><i class="fa fa-user-times"></i> Salir</a>
-                    </li><!-- end login -->
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"/>
+                    <span class="icon-bar"/>
+                    <span class="icon-bar"/>
+                </button>
+                <a class="navbar-brand page-scroll" href="{{ path('inicio') }}"> Mangaka Studio</a>
+            </div>
 
-                {% endif %}
-            </ul>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="hidden active">
+                        <a href="#page-top"></a>
+                    </li>
+                    <li class="">
+                        <a class="page-scroll" href="#services">Mangas</a>
+                    </li>
+                    <li class="">
+                        <a class="page-scroll" href="#portfolio">Categorias</a>
+                    </li>
+                    {% if not app.user %} {#Si el usuario no esta registrado#}
+                        <li class="">
+                            <a class="page-scroll" href="{{ path('app_login') }}"><i class="fa fa-user"></i> Identificate</a>
+                        </li><!-- end login -->
+                    {% elseif app.user %}
+                        <li class="">
+                            <a class="page-scroll" href="{{ path('app_logout') }}"><i class="fa fa-user-times"></i> Salir</a>
+                        </li><!-- end login -->
+                    {% endif %}
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
         </div>
-        <!-- /.navbar-collapse -->
+        <!-- /.container-fluid -->
+        </nav>
     </div>
-    <!-- /.container-fluid -->
-</nav>
 {% endblock %}
 
 {% block body %}
@@ -65,19 +76,13 @@
 
     <footer class="footer">
         <hr />
-
         <p>&copy; Alejandro {{ ''|date('Y') }}</p>
     </footer>
-
-<!-- /container -->
-
-
-
+</body>
 {% block javascripts %}
     <!-- Plugin JavaScript -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="{{ asset('js/script.js') }}"></script>
 {% endblock %}
 
-</body>
+
 </html>
