--- a/templates/capitulo/show.html.twig
+++ b/templates/capitulo/show.html.twig
@@ -1,71 +1,73 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Capitulo{% endblock %}
-
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="{{ asset('css/blueimp-gallery.min.css') }}" />
+{% endblock %}
 {% block body %}
     <h1>{{ capitulo.nombre }}</h1>
+        <div class="container">
 
-<link rel="stylesheet" href="{{ asset('css/blueimp-gallery.min.css') }}" />
-    <div class="container">
+            <div
+                    id="blueimp-gallery"
+                    class="blueimp-gallery"
+                    aria-label="image gallery"
+                    aria-modal="true"
+                    role="dialog"
+            >
+                <div class="slides" aria-live="polite"></div>
+                <a
+                        class="prev"
+                        aria-controls="blueimp-gallery"
+                        aria-label="previous slide"
+                        aria-keyshortcuts="ArrowLeft"
+                >‹</a
+                >
+                <a
+                        class="next"
+                        aria-controls="blueimp-gallery"
+                        aria-label="next slide"
+                        aria-keyshortcuts="ArrowRight"
+                >›</a
+                >
+                <a
+                        class="close"
+                        aria-controls="blueimp-gallery"
+                        aria-label="close"
+                        aria-keyshortcuts="Escape"
+                >×</a
+                >
+                <a
+                        class="play-pause"
+                        aria-controls="blueimp-gallery"
+                        aria-label="play slideshow"
+                        aria-keyshortcuts="Space"
+                        aria-pressed="false"
+                        role="button"
+                />
+                <ol class="indicator"/>
+            </div>
 
-        <div
-                id="blueimp-gallery"
-                class="blueimp-gallery"
-                aria-label="image gallery"
-                aria-modal="true"
-                role="dialog"
-        >
-            <div class="slides" aria-live="polite"></div>
-            <a
-                    class="prev"
-                    aria-controls="blueimp-gallery"
-                    aria-label="previous slide"
-                    aria-keyshortcuts="ArrowLeft"
-            >‹</a
-            >
-            <a
-                    class="next"
-                    aria-controls="blueimp-gallery"
-                    aria-label="next slide"
-                    aria-keyshortcuts="ArrowRight"
-            >›</a
-            >
-            <a
-                    class="close"
-                    aria-controls="blueimp-gallery"
-                    aria-label="close"
-                    aria-keyshortcuts="Escape"
-            >×</a
-            >
-            <a
-                    class="play-pause"
-                    aria-controls="blueimp-gallery"
-                    aria-label="play slideshow"
-                    aria-keyshortcuts="Space"
-                    aria-pressed="false"
-                    role="button"
-            />
-            <ol class="indicator"/>
+            <div id="links">
+                {% for pagina in capitulo.paginas %}
+                    </br>
+                    <a class="center-block" href="{{asset('media/' ~ pagina.getImagen()) }}">
+                        <img class="img-responsive center-block" src="{{ asset('media/' ~ pagina.getImagen()) }}" alt="pagina"/>
+                    </a>
+
+                {% else %}
+                    <tr>
+                        <td colspan="4">No se han encontrado</td>
+                    </tr>
+                {% endfor %}
+
+
+            </div>
         </div>
-
-        <div id="links">
-            {% for pagina in capitulo.paginas %}
-                </br>
-                <a class="center-block" href="{{asset('media/' ~ pagina.getImagen()) }}">
-                    <img class="img-responsive center-block" src="{{ asset('media/' ~ pagina.getImagen()) }}" alt="pagina"/>
-                </a>
-
-            {% else %}
-                <tr>
-                    <td colspan="4">No se han encontrado</td>
-                </tr>
-            {% endfor %}
-
-
-        </div>
-    </div>
 
 {% endblock %}
+
     {% block javascripts %}
         {{ parent() }}
         <script src="{{ asset('js/jquery.blueimp-gallery.min.js') }}"></script>
