--- a/templates/manga/show.html.twig
+++ b/templates/manga/show.html.twig
@@ -3,15 +3,16 @@
 {% block title %}{{ manga.nombre }}{% endblock %}
 {% block stylesheets %}
     {{ parent() }}
-    <link rel="stylesheet" href="{{ asset('css/animeflv.css') }}" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ asset('css/animeflv.css') }}"/>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
+          integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous">
 {% endblock %}
 
 {% block body %}
     <div class="Body">
         <div>
             <div class="Ficha fchlt">
-                <div class="Bg" style="background-image:url('{{asset('media/'~manga.getPortada())}}')"></div>
+                <div class="Bg" style="background-image:url('{{ asset('media/'~manga.getPortada()) }}')"></div>
                 <div class="Container">
                     <h1 class="Title">{{ manga.nombre }}</h1>
 
@@ -23,16 +24,16 @@
                     <aside class="SidebarA BFixed">
                         <div class="AnimeCover">
                             <div class="Image">
-                                <figure><img src="{{asset('media/'~ manga.getPortada())}}" alt="{{manga.getPortada()}}"
+                                <figure><img src="{{ asset('media/'~ manga.getPortada()) }}"
+                                             alt="{{ manga.getPortada() }}"
                                              itemprop="image"></figure>
                             </div>
                         </div>
-                        <p class="AnmStts A"><span class="fa-tv">Finalizado</span></p>
-                        <div id="add_pending"><a href="#"
-                                                 class="BtnNw Pndng BxSdw fa-bookmark"><span>LISTA DE ESPERA</span></a>
+
+                        <div id="segir"><a href="#" class="BtnNw Pndng BxSdw "><span><i class="fas fa-heart"></i></span></a>
                         </div>
-                        <div id="remove_pending" style="display: none;"><a href="#"
-                                                                           class="BtnNw Pndng BxSdw fa-times"><span>QUITAR DE ESPERA</span></a>
+                        <div id="dejarSeguir" style="display: none"><a href="#" class="BtnNw Pndng BxSdw"><span><i
+                                            class="far fa-heart"></i></span></a>
                         </div>
 
                     </aside>
@@ -51,7 +52,6 @@
                             <div style="clear:both"></div>
                         </section>
 
-
                         <section class="WdgtCn">
                             <div class="Top">
                                 <div class="Title">Lista de episodios</div>
@@ -59,11 +59,10 @@
 
                             <ul class="ListCaps" id="episodeList" style="max-height: 1000px; overflow-y: auto;">
                                 {% for capitulo in manga.capitulos %}
-                                <li><a href="{#TODO poner enlace#}">
-                                        <h3 class="Title">{{  capitulo.nombre }} </h3>
+                                    <li value="{{ capitulo.id }}"><a href="{#TODO poner enlace#}">
+                                            <h3 class="Title">{{ capitulo.nombre }} </h3>
                                         </a><label for="{{ capitulo.id }}" class="opivw">
-                                        <input id="{{ capitulo.id }}" class="mseen"  style="display: none;" type="checkbox"><span
-                                                class="Stts"><span>NO</span> VISTO</span></label></li>
+                                            <input id="{{ capitulo.id }}" class="mseen" style="display: none;" type="checkbox"><span class="Stts"><span>NO</span> VISTO</span></label></li>
                                 {% endfor %}
 
                             </ul>
@@ -76,4 +75,86 @@
             </div>
         </div>
     </div>
+
+{% endblock %}
+{% block javascripts %}
+    {{ parent() }}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    {#
+        Guardamos la id del user
+    #}
+    {% if app.user %}
+        <script>
+            var idManga ={{ manga.id }};
+            var usuario =
+                $.ajax({
+                    type: "GET",
+                    url: "https://127.0.0.1:8000/servicios/users/{{ app.user.id }}",
+                    dataType: 'json'
+                }).fail(function (jqXHR, textStatus, errorThrown) {
+                    console.log(errorThrown);
+                }).done(function (datos) {
+                        let Fav = datos.favoritos;
+                        for (var key in Fav) {
+
+                            if (Fav[key].Manga.id === idManga) {
+                                $("#segir").css({"display": "none"});
+                                $("#dejarSeguir").show();
+                            }
+                        }
+                    }
+                );
+
+            let Capitulos = $("ul.ListCaps li");
+
+            var paginas =
+                $.ajax({
+                    type: "GET",
+                    url: "https://127.0.0.1:8000/servicios/marca_paginas?Usuario={{ app.user.id }}",
+                    dataType: 'json'
+                }).fail(function (jqXHR, textStatus, errorThrown) {
+                    console.log(errorThrown);
+                }).done(function (datos) {
+                        for (var key in datos) {
+                        let Capis=datos[key].Capitulo.id;
+                            if (Contiene(Capis,Capitulos)) {
+                                $("#"+Capis).attr("checked", "checked");
+                        }
+                        }
+                    }
+                );
+
+            function segir() {
+            // TODO Hacer la peticion de ajax
+            }
+
+            function Nosegir() {
+                // TODO Hacer la peticion de ajax
+            }
+
+
+
+
+
+
+
+
+            function Contiene(value, arr) {
+                var result = false;
+
+                for (var i = 0; i < arr.length; i++) {
+                    var name = arr[i].value;
+                    if (name === value) {
+                        result = true;
+                        break;
+                    }
+                }
+
+                return result;
+            }
+
+
+        </script>
+    {% endif %}
 {% endblock %}
