--- a/templates/principal/index.html.twig
+++ b/templates/principal/index.html.twig
@@ -30,7 +30,7 @@
                 <div class="content">
                     <h2 class="title">{{ manga.getNombre() }}</h2>
                     <p class="copy">{{ manga.getDescriptionCorta() }}</p>
-                    <a href="{{ path('manga_show', {'id': manga.getId()}) }}" class="btn">Ver</a>
+                    <a href="{{ path('manga_show', {'id': manga.getId()}) }}" class="btn" style="font-size: 16px">Ver</a>
                     {% if app.user %} {#Si el usuario no esta registrado#}
                         <a class="btn"><i class="far fa-heart"
                                           style="color: red;
