--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -34,8 +34,6 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"/>
-                    <span class="icon-bar"/>
-                    <span class="icon-bar"/>
                 </button>
                 <a class="navbar-brand page-scroll" href="{{ path('inicio') }}"> Mangaka Studio</a>
             </div>
@@ -50,7 +48,7 @@
                         <a class="page-scroll" href="#services">Mangas</a>
                     </li>
                     <li class="">
-                        <a class="page-scroll" href="#portfolio">Categorias</a>
+                        <a class="page-scroll" href="#portfolio">Top Favoritos</a>
                     </li>
                     {% if not app.user %} {#Si el usuario no esta registrado#}
                         <li class="">
@@ -82,6 +80,8 @@
 {% block javascripts %}
     <!-- Plugin JavaScript -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="{{ asset('js/script.js') }}"></script>
+
 {% endblock %}
 
 
