--- a/public/css/animeflv.css
+++ b/public/css/animeflv.css
@@ -5998,11 +5998,12 @@ a.bttwtr {
     margin-bottom:5px
 }
 .WdgtCn {
-    background-color:#fff;
-    border-radius:3px;
-    box-shadow:0 0 30px 0 rgba(0,0,0,.1);
-    padding:15px 20px 20px;
-    margin-bottom:20px
+    background-color: #fff;
+    border-radius: 3px;
+    box-shadow: 0 0 30px 0 rgba(0,0,0,.1);
+    padding: 20px 15px 9px;
+    margin-bottom: -10px;
+    margin-top: 10px;
 }
 .WdgtCn:last-child,
 .WdgtCn .Description>*:last-child {
