--- a/templates/principal/index.html.twig
+++ b/templates/principal/index.html.twig
@@ -4,6 +4,7 @@
 {% block stylesheets %}
     {{ parent() }}
     <link rel="stylesheet" href="{{ asset('css/Cards.css') }}" />
+    <link rel="stylesheet" href="{{ asset('css/animeflv.css') }}" />
 {% endblock %}
 
 {% block body %}
@@ -19,8 +20,14 @@
             </div>
         </div>
     </header>
+    <section class="WdgtCn">
+        <div class="page-content">
+            <h2 class="Title Title-Fch">Los ultimos:</h2>
+        </div>
+        <div style="clear:both"></div>
+    </section>
+    <div class="page-content">
 
-    <main class="page-content">
         {% for manga in mangas %}
             <div class="card"
                  style=" background-image: url('{{asset('media/'~manga.getPortada())}}');
@@ -40,7 +47,35 @@
                 </div>
             </div>
         {% endfor %}
-    </main>
+    </div>
+    <section class="WdgtCn">
+        <div class="page-content">
+            <h2 class="Title Title-Fch">Actualizados Recientemente:</h2>
+        </div>
+        <div style="clear:both"></div>
+    </section>
+    <div class="page-content">
+
+        {% for manga in Actualizados %}
+            <div class="card"
+                 style=" background-image: url('{{asset('media/'~manga.getPortada())}}');
+                         background-size: cover;
+                         background-repeat: no-repeat;
+                 ">
+                <div class="content">
+                    <h2 class="title">{{ manga.getNombre() }}</h2>
+                    <p class="copy">{{ manga.getDescriptionCorta() }}</p>
+                    <a href="{{ path('manga_show', {'id': manga.getId()}) }}" class="btn" style="font-size: 16px">Ver</a>
+                    {% if app.user %} {#Si el usuario no esta registrado#}
+                        <a class="btn"><i class="far fa-heart"
+                                          style="color: red;
+                                             font-size: 16px"></i></a>
+                    {% endif %}
+
+                </div>
+            </div>
+        {% endfor %}
+    </div>
 {% endblock %}
 
 {% block javascripts %}
