--- a/templates/capitulo/show.html.twig
+++ b/templates/capitulo/show.html.twig
@@ -58,7 +58,7 @@
 
                 {% else %}
                     <tr>
-                        <td colspan="4">No se han encontrado</td>
+                        <td >No se han encontrado</td>
                     </tr>
                 {% endfor %}
 
